# signal-cpp

./: CMakeLists.txt  README.md  a.out  aes.cpp  aes_example  double-ratchet.cpp  ecdh  ecdh_from_scratch  encrypt.cpp  example.cpp  signal.cpp  signal_example  test.cpp  x3dh  x3dh.cpp  yeah.cpp
include/: aes.h  doubleratchet.h  generateKeys.h  printHex.h  signal.h
includes/: cryptoUtils.h  double-ratchet.h  doubleRatchet.h  doubleratchet.h  encryption.h  generateKeyPair.h  keyPair.h  preKey.h  preKeyBundle.h  printHex.h  session.h  signal.h  signalMessage.h  signedPreKey.h  stringtohex.h  x3dh.h
src/: double-ratchet.cc  generateKeyPair.cc  print_hex.cc  x3dh.cc
